# sentinel

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  LICENSE  MILESTONES.md  Makefile  PROGRESS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: finish-milestone.md  resume.md  review.md  start-milestone.md
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260528_0001_initial_schema.py  README.md
backend/app/: audit.py  chunking.py  config.py  db.py  extract.py  guardrails.py  ingest.py  main.py  models.py  observability.py  rag.py  retrieval.py  workflow.py
backend/app/embeddings/: __init__.py  base.py  fake.py  openai_provider.py
backend/app/extraction_schemas/: __init__.py  base.py  invoice.py  registry.py
backend/app/llm/: __init__.py  base.py  claude.py  fake.py
backend/tests/: conftest.py  test_audit_and_review.py  test_audit_events_append_only.py  test_chunking.py  test_dashboard.py  test_embeddings_fake.py  test_eval_harness.py  test_extract.py  test_extract_router.py  test_guardrails.py  test_guardrails_integration.py  test_health.py  test_ingest.py  test_model_metadata.py  test_models.py  test_query_router.py  test_rag.py  test_repositories.py  test_request_id.py  test_retrieval.py  test_schema.py  test_workflow.py
data/sample/: README.md  incident_inc-0700.md  incident_inc-0701.md  incident_inc-0702.md  incident_inc-0703.md  incident_inc-0704.md  invoice_inv-2026000.md  invoice_inv-2026001.md  invoice_inv-2026002.md  invoice_inv-2026003.md  invoice_inv-2026004.md  policy_pol-200.md  policy_pol-201.md  policy_pol-202.md  policy_pol-203.md
docs/: architecture.md  architecture.mmd  audit-and-review.md  demo.md  evaluation.md  guardrails.md  workflow.md
docs/adr/: 0001-record-architecture-decisions.md
eval/: RESULTS.md  __init__.py  harness.py  normalize.py  results.py  run.py
eval/labels/: extraction_labels.json  rag_labels.json  retrieval_labels.json
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: gen_synthetic_corpus.py
(+39 files in other folders)
