[project]
name = "sentinel"
version = "0.1.0"
description = "Sentinel — Governed Document Intelligence Platform (portfolio; all data synthetic)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
    "pre-commit>=4.0",
]

# This repo is a deployable application, not a distributable library, and the
# importable code lives under `backend/`. Tell uv not to build/install the root
# project; imports resolve via pytest `pythonpath` and uvicorn's `--app-dir`.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
# Never recurse into the virtualenv or future-milestone trees when `mypy .` runs.
exclude = '(^|/)(\.venv|\.git|node_modules|frontend|infra|eval|dist|build)(/|$)'

# pgvector ships without a py.typed marker; treat as Any rather than failing strict mypy.
[[tool.mypy.overrides]]
module = ["pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
